Fix scrollbar flicker issue

--- a/web/app/src/index.css
+++ b/web/app/src/index.css
@@ -8,8 +8,6 @@ body {
   min-height: 100vh;
   display: flex;
 
-  flex-direction: column;
-
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -21,6 +19,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html {
+  width: 100vw;
 }
 
 #root {
